added and updated files to suppor the ui layout demos

--- a/android_projs/HelloWorldAndroid/res/layout/activity_intent_demo.xml
+++ b/android_projs/HelloWorldAndroid/res/layout/activity_intent_demo.xml
@@ -60,7 +60,7 @@
         android:ems="10"
         android:hint="enter layout type" >
 
-        <requestFocus />
+        <!-- <requestFocus /> -->
     </EditText>
 
 </LinearLayout>
