updated more code for the ui handlers for implementing ifaces.

--- a/android_projs/HelloWorldAndroid/res/layout/activity_user_iface_layout.xml
+++ b/android_projs/HelloWorldAndroid/res/layout/activity_user_iface_layout.xml
@@ -34,5 +34,17 @@
 		android:layout_height="wrap_content"
 		android:text="@string/enter_text" 
 		android:inputType="text" />
+	
+	<Button
+		android:id="@+id/button_s"
+		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:text="@string/button_small"/>
+	
+	<Button
+		android:id="@+id/button_l"
+		android:layout_height="wrap_content"
+		android:layout_width="match_parent"
+		android:text="@string/button_large"/>
    
 </LinearLayout>
