--- a/android_projs/HelloWorldAndroid/res/layout/activity_user_iface_layout.xml
+++ b/android_projs/HelloWorldAndroid/res/layout/activity_user_iface_layout.xml
@@ -35,6 +35,7 @@
 		android:text="@string/enter_text" 
 		android:inputType="text" />
 	
+	<!-- used for even handling examples. -->
 	<Button
 		android:id="@+id/button_s"
 		android:layout_height="wrap_content"
@@ -46,5 +47,15 @@
 		android:layout_height="wrap_content"
 		android:layout_width="match_parent"
 		android:text="@string/button_large"/>
+	
+	<!-- used for styles demo samples... the style attrib is set..using our own custom styles
+		located in the res/values/styles.xml file under the CustomButtonStyle tags.-->
+	<TextView
+		android:id="@+id/text_id_styles"
+		style="@style/CustomTextViewStyle"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:capitalize="characters"
+		android:text="@string/hello_world" />
    
 </LinearLayout>
