added code for drag and drop feature for demo.

--- a/android_projs/AdvandedAndroidProj/res/layout/activity_advanced_main.xml
+++ b/android_projs/AdvandedAndroidProj/res/layout/activity_advanced_main.xml
@@ -1,17 +1,25 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/container"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.advandedandroidproj.AdvancedMainActivity"
-    tools:ignore="MergeRootFrame" >
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/container"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:orientation="vertical" >
+     
+     <!-- start drag and drop demo area of views.. -->
 
-    <Button
-        android:id="@+id/button1"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_name" />
-    
-</FrameLayout>
+		<ImageView
+			android:id="@+id/iv_logo"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:src="@drawable/ic_launcher"
+			android:contentDescription="@string/drag_drop" />
 
+		<Button
+		    android:id="@+id/button1"
+		    style="?android:attr/buttonStyleSmall"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content"
+		    android:layout_alignParentRight="true"
+		    android:layout_alignParentTop="true"
+		    android:text="@string/button_name" />
+		
+</RelativeLayout>
