--- a/android_projs/AdvandedAndroidProj/res/layout/activity_advanced_main.xml
+++ b/android_projs/AdvandedAndroidProj/res/layout/activity_advanced_main.xml
@@ -1,25 +1,54 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/container"
-	android:layout_width="fill_parent"
-	android:layout_height="fill_parent"
-	android:orientation="vertical" >
-     
-     <!-- start drag and drop demo area of views.. -->
+    android:id="@+id/container"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
 
-		<ImageView
-			android:id="@+id/iv_logo"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:src="@drawable/ic_launcher"
-			android:contentDescription="@string/drag_drop" />
+    <!-- start drag and drop demo area of views.. -->
 
-		<Button
-		    android:id="@+id/button1"
-		    style="?android:attr/buttonStyleSmall"
-		    android:layout_width="wrap_content"
-		    android:layout_height="wrap_content"
-		    android:layout_alignParentRight="true"
-		    android:layout_alignParentTop="true"
-		    android:text="@string/button_name" />
-		
+    <ImageView
+        android:id="@+id/iv_logo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/drag_drop"
+        android:src="@drawable/ic_launcher" />
+
+    <Button
+        android:id="@+id/button1"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentTop="true"
+        android:text="@string/button_name" />
+    
+    <!-- area for notifications..demo. -->
+
+    <Button
+        android:id="@+id/cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/update"
+        android:layout_below="@+id/update"
+        android:layout_marginTop="14dp"
+        android:text="@string/cancel_note" />
+
+    <Button
+        android:id="@+id/start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/iv_logo"
+        android:layout_marginTop="52dp"
+        android:layout_toRightOf="@+id/iv_logo"
+        android:text="@string/start_note" />
+
+    <Button
+        android:id="@+id/update"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/start"
+        android:layout_below="@+id/start"
+        android:layout_marginTop="15dp"
+        android:text="@string/update_note" />
+
 </RelativeLayout>
