--- a/android_projs/AdvandedAndroidProj/res/layout/activity_advanced_main.xml
+++ b/android_projs/AdvandedAndroidProj/res/layout/activity_advanced_main.xml
@@ -25,30 +25,27 @@
     <!-- area for notifications..demo. -->
 
     <Button
-        android:id="@+id/cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/update"
-        android:layout_below="@+id/update"
-        android:layout_marginTop="14dp"
-        android:text="@string/cancel_note" />
-
-    <Button
         android:id="@+id/start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/iv_logo"
-        android:layout_marginTop="52dp"
-        android:layout_toRightOf="@+id/iv_logo"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/button1"
         android:text="@string/start_note" />
 
     <Button
         android:id="@+id/update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/start"
+        android:layout_alignParentRight="true"
         android:layout_below="@+id/start"
-        android:layout_marginTop="15dp"
         android:text="@string/update_note" />
+
+    <Button
+        android:id="@+id/cancel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/update"
+        android:text="@string/cancel_note" />
 
 </RelativeLayout>
