added code for file io, and support for the demo. the file created is in the DDMS area where the data/my project is.

--- a/android_projs/AdvandedAndroidProj/res/layout/activity_sms_demo.xml
+++ b/android_projs/AdvandedAndroidProj/res/layout/activity_sms_demo.xml
@@ -38,5 +38,14 @@
 	    android:layout_width="192dp"
 	    android:layout_height="wrap_content"
 	    android:text="@string/make_call" />
+
+	<!-- on click file io -->
+	<Button
+	    android:id="@+id/button222"
+	    style="?android:attr/buttonStyleSmall"
+	    android:layout_width="137dp"
+	    android:layout_height="wrap_content"
+	    android:text="file_io_demo" 
+	    android:onClick="onClickFileIO"/>
 	
 </LinearLayout>
