--- a/android_projs/AdvandedAndroidProj/res/layout/activity_advanced_main.xml
+++ b/android_projs/AdvandedAndroidProj/res/layout/activity_advanced_main.xml
@@ -105,4 +105,16 @@
         android:text="@string/facebookButton"
         android:onClick="onClickFacebookTest" />
 
+    <Button
+        android:id="@+id/parseJson"
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/alert_dialog_button"
+        android:layout_alignLeft="@+id/facebook_button"
+        android:layout_toLeftOf="@+id/location_demo"
+        android:text="start json demo" 
+        android:onClick="onClickParseJson"/>
+        
+
 </RelativeLayout>
