--- a/android_projs/NBCAndroidCommonFramework/res/layout/activity_main_ut.xml
+++ b/android_projs/NBCAndroidCommonFramework/res/layout/activity_main_ut.xml
@@ -4,5 +4,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.util.nbc_common_framework.MainUTActivity"
-    tools:ignore="MergeRootFrame" />
+    tools:ignore="MergeRootFrame" >
+    
+        <TextView
+        android:id="@+id/my_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         />
+    
+   </FrameLayout>
 
