--- a/android_projs/NBCAndroidCommonFramework/res/layout/fragment_main_ut.xml
+++ b/android_projs/NBCAndroidCommonFramework/res/layout/fragment_main_ut.xml
@@ -6,7 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.util.nbc_common_framework.MainUTActivity$PlaceholderFragment" >
+    tools:context="com.util.nbc_cmn_framework_UT.MainUTActivity$PlaceholderFragment" >
 
     <TextView
         android:id="@+id/my_text_view"
