--- a/android_studio_proj/MyAppAndroid2/app/src/main/res/layout/activity_main.xml
+++ b/android_studio_proj/MyAppAndroid2/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_height="fill_parent"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true">
+        android:layout_alignParentEnd="true"
+        android:weightSum="1">
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,6 +48,27 @@
             android:layout_height="wrap_content"
             android:text="start_view_demo"
             android:id="@+id/button_list_view" />
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="300dp"
+            android:layout_height="75dp">
+
+
+            <Button
+                style="?android:attr/buttonStyleSmall"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Progress1"
+                android:id="@+id/button4" />
+
+            <ProgressBar
+
+                style="@android:style/Widget.ProgressBar.Horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/progressBar" />
+        </LinearLayout>
 
     </LinearLayout>
 </RelativeLayout>
