--- a/android_studio_proj/MyAppAndroid2/app/src/main/res/layout/activity_main.xml
+++ b/android_studio_proj/MyAppAndroid2/app/src/main/res/layout/activity_main.xml
@@ -70,5 +70,12 @@
                 android:id="@+id/progressBar" />
         </LinearLayout>
 
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start MM"
+            android:id="@+id/button5" />
+
     </LinearLayout>
 </RelativeLayout>
