added new activity to handle mutlimedia from android.

--- a/android_studio_proj/MyAppAndroid2/app/src/main/res/layout/activity_main_activity33.xml
+++ b/android_studio_proj/MyAppAndroid2/app/src/main/res/layout/activity_main_activity33.xml
@@ -3,4 +3,24 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Volume"
+        android:id="@+id/textView6" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="UpButton"
+        android:id="@+id/button6" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="PlayButton"
+        android:id="@+id/button7" />
 </LinearLayout>
