added ringtone processing to app.

--- a/android_studio_proj/MyAppAndroid2/app/src/main/res/layout/activity_main_activity33.xml
+++ b/android_studio_proj/MyAppAndroid2/app/src/main/res/layout/activity_main_activity33.xml
@@ -23,4 +23,11 @@
         android:layout_height="wrap_content"
         android:text="PlayButton"
         android:id="@+id/button7" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="play ringtone"
+        android:id="@+id/button8" />
 </LinearLayout>
