--- a/android_studio_proj/MyWeatherApp/app/src/main/res/layout/activity_current_weather.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/layout/activity_current_weather.xml
@@ -6,7 +6,8 @@
                 android:paddingRight="@dimen/activity_horizontal_margin"
                 android:paddingTop="@dimen/activity_vertical_margin"
                 android:paddingBottom="@dimen/activity_vertical_margin"
-                tools:context=".CurrentWeatherActivity">
+                tools:context=".CurrentWeatherActivity"
+                android:id="@+id/currentweatheract">
 
 
     <TextView
@@ -460,4 +461,13 @@
         android:layout_alignTop="@+id/cityname"
         android:layout_alignLeft="@+id/lat_val"
         android:layout_alignStart="@+id/lat_val"/>
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/weather_icon"
+        android:layout_alignTop="@+id/countrycode"
+        android:layout_toRightOf="@+id/weathermain_val"
+        android:layout_toEndOf="@+id/weathermain_val"/>
+
 </RelativeLayout>
