--- a/android_studio_proj/MyWeatherApp/app/src/main/res/layout/activity_city_search.xml
+++ b/android_studio_proj/MyWeatherApp/app/src/main/res/layout/activity_city_search.xml
@@ -70,4 +70,14 @@
         android:id="@+id/frame_frag_layout">
     </FrameLayout>
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Clear"
+        android:id="@+id/cleardata"
+        android:layout_above="@+id/frame_frag_layout"
+        android:layout_toRightOf="@+id/performsearch"
+        android:layout_toEndOf="@+id/performsearch"/>
+
 </RelativeLayout>
